force-app/objects/Bid_URL__c/Bid_URL__c.object-meta.xml
<CustomObject>
    <description>Liste over tomme Bid-rom i Sharepoint</description>
    <label>Bid URL</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bid URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>