force-app/objects/Bid_URL__c/fields/Defective__c.field-meta.xml
<CustomField>
    <fullName>Defective__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that bid room was defective from production in Sharepoint</description>
    <label>Defective</label>
    <type>Checkbox</type>
</CustomField>