force-app/objects/Bid_URL__c/fields/Live_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_URL__c</fullName>
    <formula>HYPERLINK( URL__c , &quot;Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live URL</label>
    <type>Text</type>
</CustomField>