force-app/objects/Bid_URL__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Relative URL to sharepoin bidroom</description>
    <label>URL</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>