force-app/objects/Bid_URL__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>