force-app/objects/Bid_URL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>Live_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Used__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Available bid rooms</label>
</ListView>