force-app/objects/Bid_URL__c/listViews/All_Bid_rooms.listView-meta.xml
<ListView>
    <fullName>All_Bid_rooms</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Used__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Live_URL__c</columns>
    <columns>URL__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Bid rooms</label>
</ListView>